--- a/gb/23/11/9/n14112578.md
+++ b/gb/23/11/9/n14112578.md
@@ -18,35 +18,35 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/6/n13879662.md#1">蒙特利尔2023年地税平均涨4.1% 12年来最高</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/30/n13961312.md#1">加拿大安省预算：未来十年住房开发目标难成</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/4/n13964928.md#1">房租物价飞涨 加拿大单身人士：单扛房租太沉重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385419.md#1">加拿大投资者弃新楼花 何时卷土重来无人知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385414.md#1">11月份大多伦多区房屋销量飙升40%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380832.md#1">在加国买房找经纪返现 能省大笔钱?专家也叫好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380836.md#1">多伦多这些社区 房价便宜又友好年轻家庭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380818.md#1">出租房包电费却禁给电动车充电 渥太华租客困惑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375905.md#1">10月份在加拿大多地买房 所需工资收入下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542903.md#1">安省乡村度假区短租条例实施一年 房源和房价变化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14538871.md#1">温哥华两居室租金最贵！五年涨幅惊人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537259.md#1">加拿大租金虽跌 租客仍陷“租或买”困境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14535056.md#1">报告：未来十年建房需翻倍 才能恢复2019年负担力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/9/n14527854.md#1">多伦多房市低迷低于 要价出售大势所趋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/5/n14525518.md#1">加拿大政府立法提议 免首次新屋买家5%GST税</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/21/n11130270.md#1" target="_blank">随波逐流成植物人 他何以逢生的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387867.md#1">如何把坏事变好事？谈随遇而安</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/8/n12676763.md#1">【元曲大家】白朴绝意仕进 词曲慰平生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385713.md#1">【古道人生】弟子216人 为何只有2人修成升天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386426.md#1">没有手机的古代小孩都玩些什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388791.md#1">夏海珍——苦海泅渡回归路（15）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392087.md#1">【新闻大家谈】英国曝光中共间谍渗透王室阴招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362253.md#1">【环球直击】编程随想案二审维持原判 妻：继续申诉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14390797.md#1">【净园财经】大陆奶茶上市第一股 市值暴跌90%</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391137.md#1">沈舟：中共低调军演 泄露低端攻台计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391556.md#1">为何木卫一上火山持续喷发 NASA解开44年谜团</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391804.md#1">北京再现血色天空 引发热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391111.md#1">富二代何超莲砸1亿拍电影 首日预售票房仅16万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391280.md#1">传克里斯伊凡在《复仇者联盟5》演“游牧者”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391336.md#1">相信裘莉与彼特合演会大赚 制片人出巨额片酬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391136.md#1">曾赴中国拍戏 王耿豪爆返台关键：被逼政治表态</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391786.md#1">《破·地狱》港票房5.5亿台币 观影逾200万人次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391288.md#1">有使用暖气的看过来 专家教你用这招省钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386475.md#1">赚百万美元不是梦 投资ETF有哪些好处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389581.md#1">【带妈妈去旅行】台湾冬天泡温泉疗伤篇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391759.md#1">为什么天气寒冷时 排尿频率会增加？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14391784.md#1">7种高钠地雷食物 不只伤肾还易得糖尿病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534405.md#1">他说了一句话  冤孽紧追不舍穿越前生到今生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/9/n14112578.htm">报告：加拿大440万家庭需经济适用住房</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/9/n14112578.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
