--- a/gb/23/11/21/n14121448.md
+++ b/gb/23/11/21/n14121448.md
@@ -41,33 +41,33 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/20/n14119921.md#1">加拿大外包公务员搬迁支援服务系统遭黑客</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/20/n14120676.md#1">加拿大儿童福利金 最高增至每年7,437元</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/21/n14121340.md#1">加国麦吉尔大学禁止在学校设备上使用微信</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383901.md#1">加拿大人点外卖最爱啥？肉汁芝士薯条登顶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385548.md#1">加拿大10月贸易逆差收窄 对美顺差降至新低</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385544.md#1">安省游乐宫重建成本飙升 六倍超预期</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14385530.md#1">报告：2025年四口之家食品支出预计增加800元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543050.md#1">多伦多一家冰淇淋店跻身世界标志之一</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542874.md#1">联邦政府全面取消《加拿大自由贸易协定》障碍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542829.md#1">从海狸到格子呢成加国象征 五个鲜为人知之事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542835.md#1">国庆日 卡尼赞联邦制：团结使加拿大更强大</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10379858.md#1" target="_blank">剑平：抗美援朝？时间地点对手名义结果全错</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/8/n10699044.md#1" target="_blank">美国女学者修炼奇缘(上) 脱胎换骨的改变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/25/n10088158.md#1" target="_blank">林辉：民国长春市长厚颜事共 文革差点被打死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/11/10/n3726603.md#1" target="_blank">【历史回顾】羊城晚报：老少皆炼法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？河南奇人张四目之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386112.md#1">【未解之谜】用DNA谱曲？遗传学中隐藏生命密码</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362237.md#1">【晚间新闻】川普卖香水 广告惊现拜登夫人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389264.md#1">【马克时空】叙利亚一夕变天 以色列占领缓冲区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388568.md#1">【时事金扫描】叙新总理出炉 以军炸俄军基地</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388165.md#1">天文学家发现更多奇怪天体——暗彗星</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387906.md#1">突破性发现 科学家首次界定单个光子的形状</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387737.md#1">韦伯望远镜证实宇宙正在以超预期速度膨胀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388478.md#1">泰勒丝“时代”巡演落幕 工作人员奖金惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389328.md#1">孙俪自曝13岁儿子用身体帮她挡车 网友大赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389389.md#1">高圆圆素颜带娃外出骑车 一细节获赞温馨有爱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388542.md#1">《鱿鱼游戏2》破例 未播入围金球奖最佳剧集</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387702.md#1">周润发降价2500万港元 挂牌出售香港山顶豪宅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386058.md#1">5种运动心脏最喜欢 搭配1水果延年益寿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385098.md#1">一分钟护眼操精华版 改善干眼症白内障</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386207.md#1">调节免疫 护脑抗炎 短链脂肪酸原来如此重要</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388033.md#1">遇到客机爆胎 飞行员应该如何处理？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388410.md#1">持续头痛、血压降不下  可能是脊椎出问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534405.md#1">他说了一句话  冤孽紧追不舍穿越前生到今生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/21/n14121448.htm">加拿大秋季经济声明 计划大量投资住房</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/21/n14121448.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
